# magic_enum_example

./: README.md
magic_enum/: CMakeLists.txt  main.cpp
